Fix year label alignment

--- a/src/epl-business-plan-manager/public/css/create-plan.css
+++ b/src/epl-business-plan-manager/public/css/create-plan.css
@@ -13,6 +13,7 @@ body {
 
 .create-plan-year-labels {
     text-align:                        center;
+    margin-right:                      37px;
 }
 
 #create-plan-section {
